--- a/src/Components/CodeEditor/CodeMirror.css
+++ b/src/Components/CodeEditor/CodeMirror.css
@@ -3,6 +3,7 @@
 .CodeMirror {
   /* Set height, width, borders, and global font properties here */
   font-family: monospace;
+  font-size: 15px;
   height: 100%;
   color: black;
   direction: ltr;
